# leistungsnachweis-algo

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  SudokuGitter.cpp  SudokuGitter.h  generateDocumentationAndDeploy.sh  index.html  main.cpp
doxygen_doc/html/: _sudoku_gitter_8h_source.html  annotated.html  class_sudoku_gitter-members.html  class_sudoku_gitter.html  classes.html  files.html  functions.html  functions_func.html  md__home_travis_build_ob-algdatii-ss18_leistungsnachweis-algo__r_e_a_d_m_e.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  struct_sudoku_gitter_1_1cell-members.html  struct_sudoku_gitter_1_1cell.html  structcell-members.html  structcell.html
doxygen_doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  search.js  searchdata.js
doxygen_doc/latex/: annotated.tex  class_sudoku_gitter.tex  md__home_travis_build_ob-algdatii-ss18_leistungsnachweis-algo__r_e_a_d_m_e.tex  md__r_e_a_d_m_e.tex  refman.tex  struct_sudoku_gitter_1_1cell.tex  structcell.tex
generate/: SudokuGenerator.cpp  SudokuGenerator.h
html/: index.html
latex/: refman.tex
main/: CMakeLists.txt  ClassToTest.cpp  main.cpp
output/: big_sudoku12.html  big_sudoku15.html  big_sudoku16.html  big_sudoku2.html  big_sudoku4.html  big_sudoku6.html  big_sudoku8.html  big_sudoku9.html  sudoku1.html  sudoku12.html  sudoku15.html  sudoku16.html  sudoku2.html  sudoku3.html  sudoku4.html  sudoku6.html  sudoku8.html  sudoku9.html
sudoku/visual/: ClassicSudokuVisualizer.cpp
test/: CMakeLists.txt  testMain.cpp  testTest.cpp  test_BigSudokuVisualizer.cpp  test_ClassicSudokuVisualizer.cpp  test_SudokuGitter.cpp  test_SudokuGitterColRow.cpp  test_SudokuGitterColRowStressTest.cpp  test_SudokuGitterSolvable.cpp  test_SudokuGitterStressTest.cpp  test_head.h  test_sudokuGitter.cpp  test_sudokuGitterStressTest.cpp
visual/: BigSudokuVisualizer.cpp  BigSudokuVisualizer.h  ClassicSudokuVisualizer.cpp  ClassicSudokuVisualizer.h
